2008-02-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DbLoader.py (DbLoader.import_file): 
	Importer will stay on dialog until cancel or success. Errors
	will remain in dialog until fixed, or cancel.

2008-02-19 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_WebReportDialog.py:
	* src/ReportBase/_ReportDialog.py:
	* src/ReportBase/_TextReportDialog.py:
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/ReportBase/_DrawReportDialog.py:
	* src/ReportBase/_Report.py:
	* src/ReportBase/_DocReportDialog.py:
	* src/ReportBase/_CommandLineReport.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	* src/plugins/WebCal.py:
	* src/plugins/KinshipReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DescendReport.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/BookReport.py:
	* src/plugins/NarrativeWeb.py:
	* src/plugins/TimeLine.py:
	* src/plugins/GVFamilyLines.py:
	* src/plugins/Calendar.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/MarkerReport.py:
	* src/plugins/DescendChart.py:
	* src/plugins/EndOfLineReport.py:
	* src/plugins/AncestorChart.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/SimpleBookTitle.py:
	* src/plugins/CustomBookText.py:
	* src/plugins/FamilyGroup.py:
	* src/plugins/GVRelGraph.py:
	* src/plugins/GVHourGlass.py:
	* src/plugins/StatisticsChart.py:
	* src/plugins/FanChart.py:
	Remove the "person" option from reports, report options, and report dialogs.
	Person is selected by the user for all reports.


2008-02-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py: News renders text with styles
	* src/DataViews/GrampletView.py (GuiGramplet.render_text): 
	First draft of a TextBuffer with markup

2008-02-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: #1559, CTRL+N/P also if no sidebar

2008-02-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DbManager.py: #1725, ENTER should behave like double click
